# text2sql

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
config/domains/: finance.yaml
core/: __init__.py  gemini_client.py  prompt_builder.py  sql_parser.py
data/: __init__.py  few_shot_pool.py  test_cases.py
data/domains/finance/: few_shot_examples.json  schema.sql  test_cases.json
schema/: __init__.py  formatter.py  manager.py
strategies/: __init__.py  base.py  registry.py
strategies/generation/: __init__.py  candidate_pool.py  divide_and_conquer.py  synthetic_examples.py  temperature_diversity.py
strategies/pipelines/: __init__.py  multi_path_pipeline.py
strategies/prompting/: __init__.py  chain_of_thought.py  decomposition.py  execution_plan_cot.py  few_shot_dynamic.py  few_shot_mmr.py  few_shot_static.py  zero_shot.py  zero_shot_enhanced.py
tests/: __init__.py  conftest.py
tests/test_core/: test_sql_parser.py
tests/test_strategies/: __init__.py  test_prompting.py
